--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ecommerce</title>
+  <title>Landing Page</title>
 
   <!-- Required stylesheets -->
   <link rel="stylesheet" href="css/styles.css">
@@ -188,3 +188,4 @@
 </footer>
 
 </html>
+
